# neocalc-core

./: .gitignore  Cargo.toml
locales/en-US/: main.ftl
locales/fr/: main.ftl
locales/it/: main.ftl
locales/pt-BR/: main.ftl
src/: i18n.rs  lib.rs  session_manager.rs  utils.rs
src/engine/: ast.rs  errors.rs  mod.rs  parser.rs  tokens.rs  types.rs
src/engine/functions/: bitwise.rs  complex_ops.rs  core_funcs.rs  financial.rs  hyperbolic.rs  logic.rs  mod.rs  statistics.rs  trigonometry.rs
tests/: engine_tests.rs  formatting_tests.rs  scoping_tests.rs  stress_tests.rs
