[package]
name = "neocalc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
num = { version = "0.4", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-complex = { version = "0.4", features = ["serde"] }
logos = "0.16"
thiserror = "2.0"
inventory = "0.3"
once_cell = "1.19"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
